--- a/styles/larger.css
+++ b/styles/larger.css
@@ -38,6 +38,8 @@ header img {
 
 
 
+
+
 /* Adjust size as screen size changes */
 /* Media query for screens larger than 900px */
 @media (min-width: 900px) {
@@ -108,7 +110,10 @@ header img {
     .card a {
         font-size: 1.2rem;
     }
-    
+
+    .vLabel span {
+        font-size: 2.75rem;
+    }
 }
 
 @media (min-width: 1100px) {
@@ -218,6 +223,8 @@ header img {
     }
 
 
+
+
 @media (max-width: 1450px) {
     .card span {
         font-weight: bold;
@@ -226,6 +233,10 @@ header img {
 
     .card a {
         font-size: .75rem;
+    }
+
+    .card p {
+        font-size: 1rem;
     }
 
     .herolabel p {
