--- a/styles/base.css
+++ b/styles/base.css
@@ -307,7 +307,7 @@ main h1 {
     top: 50px;
     left: 2%;
     
-    background: radial-gradient(ghostwhite, rgb(49, 113, 186));
+    background: radial-gradient(rgb(128, 128, 129), #06489e);
     border: 1px solid black;
     padding: .75rem;
     box-shadow: 0 0 4rem white;
@@ -319,7 +319,7 @@ main h1 {
     padding: .25rem;
     font-weight: 500;
     font-size: 1.1rem;
-    color: #f8da5f;
+    color: white;
     font-family:"Varela Round", serif;
     text-shadow: 4px 4px 4px black; 
 }
@@ -400,7 +400,7 @@ footer img {
         position: absolute;
         top: 50px;
         left: 5%;
-        background: radial-gradient(ghostwhite, rgb(49, 113, 186));
+        background: radial-gradient(rgb(128, 128, 129), #06489e);
         border: 1px solid black;
         padding: .75rem;
         box-shadow: 0 0 4rem white;
@@ -412,7 +412,7 @@ footer img {
         padding: .25rem;
         font-weight: 500;
         font-size: 1.2rem;
-        color: #f8da5f;
+        color: white;
         font-family:"Varela Round", serif;
         text-shadow: 4px 4px 4px black; 
     }
@@ -507,7 +507,7 @@ footer img {
         left: 50%; /* Start from the horizontal center */
         transform: translate(-50%, -10%);
         width: 350px;
-        background: radial-gradient(ghostwhite, rgb(49, 113, 186));
+        background: radial-gradient(rgb(128, 128, 129), #06489e);
         border: 1px solid black;
         padding: .25rem;
         box-shadow: 0 0 4rem white;
@@ -520,7 +520,7 @@ footer img {
         margin: 0;
         font-weight: 500;
         font-size: 1.2rem;
-        color: #f8da5f;
+        color: white;
         font-family:"Varela Round", serif;
         text-shadow: 4px 4px 4px black; 
     }
