--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -458,7 +458,7 @@ header {
     .fw-pic1 figcaption {
         background-color: var(--background-color-light);
         color: var(--text-color-dark);
-        padding: 1rem;
+        padding: .5rem;
         font-size: 1.75rem;
         text-align: center;
     }
