--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -479,8 +479,13 @@ header {
     padding: 30px; /* Adds some space inside the container */
     }
 
-    h3 {
+    .events-card-content h3 {
     font-size: 1.5rem;
+    }
+
+    .byu {
+        padding-top: 20px;
+        padding-bottom: 10px;
     }
 
     .attract-card-content h3 {
@@ -517,11 +522,32 @@ header {
 
     .stats-card-content p {
         text-align: left;
-        margin-left: 20px;
+        margin-left: 30px;
+        padding-bottom: 10px;
+        font-size: 1.2rem;
+    }
+
+    .demo-card-content h3 {
+        text-align: center;
+        padding-bottom: 10px;
+    }
+
+    .demo-card-content {
+        padding: 20px;
+    }
+
+    .demo-card-content p {
+        text-align: left;
+        margin-left: 30px;
         padding-bottom: 10px;
         font-size: 1.2rem;
     }
     
+    .welcome-card-content h3 {
+        text-align: center;
+        font-size: 1.25rem;
+        padding: 20px 0;
+    }
 
     .navigation {
         display: flex; /* Show navigation */
